# Scrop

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md  cliff.toml  index.html  package-lock.json  package.json  playwright.config.ts  vite.config.ts  vitest.config.ts
.codex/skills/commit/: SKILL.md
.codex/skills/commit/agents/: openai.yaml
.codex/skills/e2e-gen/: SKILL.md
.codex/skills/e2e-gen/agents/: openai.yaml
.codex/skills/perf-ebpf-abba/: SKILL.md
.codex/skills/perf-ebpf-abba/agents/: openai.yaml
.codex/skills/perf-issue-report/: SKILL.md
.codex/skills/perf-issue-report/agents/: openai.yaml
.codex/skills/perf-microbench/: SKILL.md
.codex/skills/perf-microbench/agents/: openai.yaml
.codex/skills/perf-normal-traffic/: SKILL.md
.codex/skills/perf-normal-traffic/agents/: openai.yaml
.codex/skills/perf-normalized-metrics/: SKILL.md
.codex/skills/perf-normalized-metrics/agents/: openai.yaml
.codex/skills/perf-paired-ci/: SKILL.md
.codex/skills/perf-paired-ci/agents/: openai.yaml
.codex/skills/perf-paired-ci/scripts/: analyze_paired_ci.mjs
.codex/skills/perf-playbook/: SKILL.md
.codex/skills/perf-playbook/agents/: openai.yaml
.codex/skills/release/: SKILL.md
.codex/skills/release/agents/: openai.yaml
e2e/: animations.spec.ts  app.spec.ts  dropped-packets.spec.ts  helpers.ts  nic-attach.spec.ts  port-dnd.spec.ts  port-edit.spec.ts  realtime-features.spec.ts  stream-transitions.spec.ts
perf/: lighthouse.ts  perf.spec.ts  playwright.config.ts  stress.spec.ts
proto/: packet_stream.proto
scrop-capture/: Cargo.toml  build.rs
scrop-capture/src/: drop_reason.rs  ebpf.rs  lib.rs  mock.rs  types.rs
scrop-common/: Cargo.toml
scrop-common/src/: lib.rs
scrop-ebpf/: Cargo.toml
scrop-ebpf/src/: main.rs  scrop.bpf.c
scrop-server/: Cargo.toml  build.rs
scrop-server/src/: main.rs  routes.rs  ws.rs  ws_proto.rs
scrop-server/tests/: api_integration.rs  ws_integration.rs
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/src/: events.rs  lib.rs  main.rs
src-tauri/src/capture/: drop_reason.rs  ebpf.rs  mock.rs  mod.rs
src-tauri/src/packet/: mod.rs  types.rs
src/components/common/: EmptyState.tsx  ErrorBoundary.tsx  ScrollHint.tsx
src/components/dev/: MockController.tsx
src/components/layers/: FWLayer.tsx  NICLayer.tsx  NetworkLayer.tsx  NetworkLayerDevice.tsx  PortAnimationZone.tsx  PortLayer.tsx
src/components/layout/: Header.tsx  LayerContainer.tsx  ScrollContainer.tsx
src/components/nic/: NicDevice.tsx
src/components/packet/: AnimatedPacket.tsx  DropStream.tsx  DroppedPacketAnimation.tsx  Packet.tsx  PacketStream.tsx  StreamAnimation.tsx  StreamFadeOut.tsx
src/components/port/: AddMailbox.tsx  DraggableMailbox.tsx  EditableLabel.tsx  Mailbox.tsx  Port.tsx  PortList.tsx
src/constants/: index.ts
src/constants/__tests__/: index.test.ts
src/data/: mockData.ts
src/hooks/: index.ts  useCaptureControl.ts  useDeviceAlignX.ts  useFWLayerStore.ts  useHeaderStore.ts  useLayerCenterX.ts  useNICLayerStore.ts  useNicStore.ts  usePacketAnimation.ts  usePacketStore.ts  usePortLayerStore.ts  usePortPositionStore.ts  usePortStore.ts  useScrollOverflow.ts
src/mocks/: packetGenerator.ts
src/stores/: nicStore.ts  packetStore.ts  portStore.ts
src/stores/__tests__/: nicStore.test.ts  packetStore.test.ts  portStore.test.ts
src/transport/: index.ts  replay.test.ts  replay.ts  tauri.ts  web.test.ts  web.ts
src/transport/proto/: decodePacketBatch.test.ts  decodePacketBatch.ts
src/types/: index.ts  packetState.ts
src/utils/: constants.ts
src/utils/__tests__/: constants.test.ts
