[package]
name = "scrop-capture"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
rand = "0.9"
chrono = "0.4"

# eBPF dependencies (optional)
aya = { version = "0.13", features = ["async_tokio"], optional = true }
bytes = { version = "1", optional = true }
scrop-common = { path = "../scrop-common", features = ["user"], optional = true }

[features]
default = ["ebpf"]
ebpf = ["aya", "bytes", "scrop-common"]
