[package]
name = "scrop-ebpf"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "scrop-ebpf"
path = "src/main.rs"

[dependencies]
aya-ebpf = "0.1"
aya-log-ebpf = "0.1"
network-types = "0.0.7"
scrop-common = { path = "../scrop-common", default-features = false }

[profile.release]
lto = true
panic = "abort"
codegen-units = 1
opt-level = 2
strip = "none"
