[package]
name = "scrop-server"
version = "0.2.1"
edition = "2021"

[[bin]]
name = "scrop-server"
path = "src/main.rs"

[dependencies]
scrop-capture = { path = "../scrop-capture", default-features = false }
axum = { version = "0.8", features = ["ws"] }
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6", features = ["fs", "cors"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
prost = "0.14"
rust-embed = "8"
mime_guess = "2"
clap = { version = "4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
http-body-util = "0.1"
tokio-tungstenite = "0.27"
futures-util = "0.3"
prost = "0.14"

[features]
default = ["ebpf"]
ebpf = ["scrop-capture/ebpf"]

[build-dependencies]
prost-build = "0.14"
protoc-bin-vendored = "3"
