[package]
name = "scrop"
version = "0.1.0"
description = "Packet capture visualization tool"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "scrop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
rand = "0.9"
chrono = "0.4"

# eBPF dependencies (optional)
aya = { version = "0.13", features = ["async_tokio"], optional = true }
aya-log = { version = "0.2", optional = true }
bytes = { version = "1", optional = true }
log = { version = "0.4", optional = true }
scrop-common = { path = "../scrop-common", features = ["user"], optional = true }

[features]
default = ["ebpf"]
ebpf = ["aya", "aya-log", "bytes", "log", "scrop-common"]
